--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,14 @@
                 <type>pom</type>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
+            <dependency>
+                <groupId>com.google.zxing</groupId>
+                <artifactId>core</artifactId>
+                <version>3.4.1</version>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
