--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,13 @@
                 <version>3.4.1</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>30.1-jre</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
