--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,17 @@
                 <version>30.1-jre</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>5.2.12.RELEASE</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-redis</artifactId>
+                <version>2.2.5.RELEASE</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
