--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,13 @@
                 <version>27.1-jre</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>1.2.4</version>
+            </dependency>
+
 
             <!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
             <dependency>
