--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,12 @@
                 <version>2.2.5.RELEASE</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.github.APIJSON</groupId>
+                <artifactId>apijson-framework</artifactId>
+                <version>LATEST</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -158,5 +164,23 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>spring-snapshots</id>
+            <url>https://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <url>https://repo.spring.io/milestone</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
 </project>
