--- a/pom.xml
+++ b/pom.xml
@@ -147,10 +147,24 @@
             </dependency>
 
             <dependency>
+                <groupId>org.redisson</groupId>
+                <!-- for Spring Data Redis v.2.2.x -->
+                <artifactId>redisson-spring-data-22</artifactId>
+                <version>3.14.1</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.github.APIJSON</groupId>
                 <artifactId>apijson-framework</artifactId>
                 <version>LATEST</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>2.7.0</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
