--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,17 @@
                 <version>2.7.0</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.hibernate.validator</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>6.1.5.Final</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-validator</groupId>
+                <artifactId>commons-validator</artifactId>
+                <version>1.7</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
