--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -65,6 +65,8 @@ fu-api:
         dnsMonitoringInterval: 5000
       threads: 0
       nettyThreads: 0
+
   applications:
-    - path: demo
+    - name: demo
+      path: test/demo
 
