--- a/core/pom.xml
+++ b/core/pom.xml
@@ -140,10 +140,10 @@
 
                 <!-- maven default生命周期，process-resources阶段执行maven-resources-plugin插件的resources目标处理主资源目下的资源文件时，只处理如下配置中包含的资源类型 -->
                 <includes>
-                    <include>**/*</include>
+                    <include>**/**</include>
                 </includes>
 
-                <filtering>true</filtering>
+                <filtering>false</filtering>
             </resource>
         </resources>
     </build>
