--- a/core/src/main/resources/fu-api/design/parameter_config.json
+++ b/core/src/main/resources/fu-api/design/parameter_config.json
@@ -4,7 +4,7 @@
       "API_PARAMETER": {
         "parent_type": "@{parent_type}",
         "parent_id": "@{parent_id}",
-        "@column": "id,parent_type,parent_id,name,title,is_required,note,position,default_value,data_type,status,is_array,gmt_create,gmt_modified",
+        "@column": "id,parent_type,parent_id,name,title,is_required,note,position,default_value,is_hidden,is_read_only,data_type,status,is_array,gmt_create,gmt_modified",
         "@order": "position,sort"
       },
       "query": 2
@@ -33,8 +33,8 @@
   },
   "new-default": {
     "data": {
-      "format": "html",
-      "permission": "public",
+      "position": "body",
+      "data_type": "string",
       "status": "0"
     },
     "code": "200",
@@ -43,11 +43,21 @@
   "put-input": {
     "API_PARAMETER": {
       "id": "@{id}",
+      "parent_type": "@{parent_type}",
+      "parent_id": "@{parent_id}",
+      "name": "@{name}",
+      "alias": "@{alias}",
       "title": "@{title}",
       "note": "@{note}",
-      "format": "@{format}",
-      "content": "@{content}",
-      "permission": "@{permission}",
+      "position": "@{position}",
+      "data_type": "@{data_type}",
+      "is_array": "@{is_array}",
+      "default_value": "@{default_value}",
+      "is_required": "@{is_required}",
+      "is_hidden": "@{is_hidden}",
+      "is_read_only": "@{is_read_only}",
+      "examples": "@{examples}",
+      "validations": "@{validations}",
       "status": "@{status}"
     }
   },
@@ -60,11 +70,19 @@
     "API_PARAMETER": {
       "parent_type": "@{parent_type}",
       "parent_id": "@{parent_id}",
+      "name": "@{name}",
+      "alias": "@{alias}",
       "title": "@{title}",
       "note": "@{note}",
-      "format": "@{format}",
-      "content": "@{content}",
-      "permission": "@{permission}",
+      "position": "@{position}",
+      "data_type": "@{data_type}",
+      "is_array": "@{is_array}",
+      "default_value": "@{default_value}",
+      "is_required": "@{is_required}",
+      "is_hidden": "@{is_hidden}",
+      "is_read_only": "@{is_read_only}",
+      "examples": "@{examples}",
+      "validations": "@{validations}",
       "status": "@{status}"
     }
   },
@@ -73,10 +91,20 @@
     "code": "@{API_PARAMETER.code}",
     "msg": "@{API_PARAMETER.msg}"
   },
+  "delete-test": {
+    "[]": {
+      "API_PARAMETER": {
+          "parent_type": "parameter",
+          "parent_id": "@{parameter_id}",
+          "@column": "id"
+      },
+      "query": 2
+    },
+    "total@": "/[]/total",
+    "info@": "/[]/info"
+  },
   "delete-input": {
     "API_PARAMETER": {
-      "parent_type": "@{parent_type}",
-      "parent_id": "@{parent_id}",
       "id": "@{id}"
     }
   },
