--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -119,6 +119,12 @@
             <artifactId>fu-api-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>fun.utils</groupId>
+            <artifactId>fu-api-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
