--- a/core/pom.xml
+++ b/core/pom.xml
@@ -112,8 +112,12 @@
 
         <dependency>
             <groupId>org.redisson</groupId>
-            <!-- for Spring Data Redis v.2.2.x -->
             <artifactId>redisson-spring-data-22</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
         </dependency>
 
         <dependency>
