--- a/pom.xml
+++ b/pom.xml
@@ -148,9 +148,15 @@
 
             <dependency>
                 <groupId>org.redisson</groupId>
-                <!-- for Spring Data Redis v.2.2.x -->
                 <artifactId>redisson-spring-data-22</artifactId>
-                <version>3.14.1</version>
+                <version>3.15.3</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.redisson/redisson -->
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>3.15.3</version>
             </dependency>
 
             <dependency>
